# pratica_pqc

./: .gitignore  CMakeLists.txt  README.md  alice2_kem.cpp  alice_kem.cpp  bob_kem.cpp  flake.nix  requirements.txt
src/: alice.py  alice2_kem.cpp  alice_kem.cpp  bob.py  bob_kem.cpp  mqtt_client.py
src/pythonAES/: main.py  mqtt_client.py
